# fastapi-starter-kit

./: .env.example  .gitignore  Makefile  README.md  README_en.md  alembic.ini  docker-compose-dev.yaml  main.py  pyproject.toml
.agent/rules/: modern-python-code-style.md
alembic/: env.py
alembic/versions/: 4861b51d1135_init_user_table.py  f72c3760566d_add_username_to_user_table.py
app/: main.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  deps.py  exceptions.py  handlers.py  response.py  security.py
app/crud/: base.py
app/db/: session.py
app/models/: base.py  user.py
app/schemas/: user.py
app/services/: user_service.py
